Detailed page created and nav bar uav tab is set

--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -86,7 +86,7 @@
               </p>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">RC aircrafts UAVs</a>
+              <a class="dropdown-item" href="{% url 'uav:all_uavs' %}">RC aircrafts UAVs</a>
               <a class="dropdown-item" href="#">Fixed Wings</a>
               <a class="dropdown-item" href="#">Multirotors</a>
             </div>
