--- a/uav/templates/uav/detail.html
+++ b/uav/templates/uav/detail.html
@@ -2,48 +2,154 @@
 {% load static %}
 
 {% block content %}
-<div class="section" id="carousel">
-  <div class="container">
-    <div class="title">
-      <h4>Carousel</h4>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-lg-8 col-md-12">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block" src="assets/img/bg1.jpg" alt="First slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Nature, United States</h5>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block" src="assets/img/bg3.jpg" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Somewhere Beyond, United States</h5>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block" src="assets/img/bg4.jpg" alt="Third slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Yellowstone National Park, United States</h5>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <i class="now-ui-icons arrows-1_minimal-left"></i>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <i class="now-ui-icons arrows-1_minimal-right"></i>
-          </a>
-        </div>
+
+<br>
+<div class="main">
+<br>
+  <div class="section section-basic" id="basic-elements">
+    <div class="container">
+      <h1>{{ uav.title }}</h1>
       </div>
     </div>
   </div>
-</div>
+
+
+<div class="section" id="carousel">
+       <div class="container">
+         <!-- <div class="title">
+           <h4>Gal</h4>
+         </div> -->
+         <div class="row justify-content-center">
+           <div class="col-lg-12 col-md-16">
+             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+               <ol class="carousel-indicators">
+                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+               </ol>
+               <div class="carousel-inner" role="listbox">
+                 <div class="carousel-item active">
+                   <img class="d-block" src="{{ uav.image.url }}" alt="First slide">
+                   <div class="carousel-caption d-none d-md-block">
+                     <h5>{{ uav.title }}</h5>
+                   </div>
+                 </div>
+                 {% for p in photos %}
+                 <div class="carousel-item">
+                   <img class="d-block" src="{{ p.images.url }}" alt="Second slide">
+                   <div class="carousel-caption d-none d-md-block">
+                     <h5>{{ p.image_info }}</h5>
+                   </div>
+                 </div>
+                 {% endfor %}
+                 <!-- <div class="carousel-item">
+                   <img class="d-block" src="assets/img/bg4.jpg" alt="Third slide">
+                   <div class="carousel-caption d-none d-md-block">
+                     <h5>Yellowstone National Park, United States</h5>
+                   </div>
+                 </div> -->
+               </div>
+               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                 <i class="now-ui-icons arrows-1_minimal-left"></i>
+               </a>
+               <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                 <i class="now-ui-icons arrows-1_minimal-right"></i>
+               </a>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+
+<div class="section">
+        <div class="container">
+          <h3 class="title">STORY</h3>
+          <div id="typography">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="typography-line">
+                <!-- <span>Quote</span> -->
+                <blockquote>
+                  <p class="blockquote blockquote-info">
+                    <b>{{ uav.description }}</b>
+                    <br>
+                    <br>
+                    <small>
+                      - <b>{{ uav.user_name|capfirst }}</b>
+                    </small>
+                  </p>
+                </blockquote>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <!-- Commrnt form -->
+
+          <div id="inputs">
+            <h4>Comment</h4>
+            <!-- <p class="category">fillup</p> -->
+            <div class="row">
+              <div class="col-sm-6 col-lg-3">
+                <div class="form-group">
+                  Email :
+                  <br>
+                  <br>
+                  <input type="text"  placeholder="Email" class="form-control" />
+                </div>
+              </div>
+              <br>
+              <br>
+              <div class="col-sm-1 col-lg-10">
+                <div class="form-group has-success">
+
+                  <input type="text" placeholder="Comment here" class="form-control form-control-success" />
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+
+
+<!-- Comments here -->
+
+<div class="section section-team text-center">
+      <div class="container">
+        <h2 class="title">Comments section</h2>
+        <div class="team">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="team-player">
+                <img src="{% static 'assets/img/avatar.jpg' %}" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                <h4 class="title">Romina Hadid</h4>
+                <p class="category text-primary">Model</p>
+                <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
+                  <a href="#">links</a> for people to be able to follow them outside the site.</p>
+                <!-- <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a> -->
+                <!-- <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-instagram"></i></a> -->
+                <!-- <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-facebook-square"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+      </div>
+  </div>
+
+
+
+
+
+
+
+
 {% endblock %}
