Added video functionality also sorted about page... that page will be static

--- a/uav/templates/uav/all_uavs.html
+++ b/uav/templates/uav/all_uavs.html
@@ -13,7 +13,7 @@
         <h1 class="h1-seo">UAV PROJECTS</h1>
         <h3></h3>
       </div>
-      <h6 class="category category-absolute"> Unidentified Areal Vehicle. </h6>
+      <h6 class="category category-absolute"> Unmaned Areal Vehicle. </h6>
     </div>
   </div>
   </div>
