--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -73,10 +73,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
-              <i class="now-ui-icons travel_info"></i>
-              <p>About us</p>
-            </a>
+              <a class="nav-link" href="{% url 'aboutus' %}">
+                <p>About Us</p>
+              </a>
           </li>
 
           <li class="nav-item dropdown">
@@ -144,15 +143,9 @@
       <div class="page-header-image" data-parallax="true" style="background-image:url('{% static 'assets/img/header.jpg' %}');">
       </div>
     </div> -->
-    <div class="main">
-
-      <div class="section section-basic" id="basic-elements">
-        <div class="container">
-          {% block special %}
-          {% endblock %}
-          </div>
-        </div>
-      </div>
+    <br>
+    <br>
+    <br>
       {% block content %}
 
       {% endblock %}
@@ -184,8 +177,9 @@
           <script>
             document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
           </script>, Designed by -->
-          <a href="#" target="_blank">Coded by Shivam</a>. Designed by
-          <a href="#" target="_blank">Creative Tim</a>.
+          <a href="http://melodic.pythonanywhere.com" target="_blank">Coded by Shivam</a>.
+          <!-- Designed by -->
+          <!-- <a href="#" target="_blank">Creative Tim</a>. -->
         </div>
       </div>
     </footer>
