--- a/uav/templates/uav/detail.html
+++ b/uav/templates/uav/detail.html
@@ -42,6 +42,19 @@
                    </div>
                  </div>
                  {% endfor %}
+
+                 {%for video in videos %}
+
+                 <div class="carousel-item">
+                   <video class="img-fluid" autoplay loop muted>
+                     <source src="{{ video.videofile.url }}" type="video/mp4" />
+                   </video>
+                   <div class="carousel-caption d-none d-md-block">
+                     <h5>{{ video.video_info }}</h5>
+                   </div>
+                 </div>
+
+                 {% endfor %}
                  <!-- <div class="carousel-item">
                    <img class="d-block" src="assets/img/bg4.jpg" alt="Third slide">
                    <div class="carousel-caption d-none d-md-block">
@@ -86,34 +99,44 @@
 
 
 
+
+
           <!-- Commrnt form -->
 
+
+        {% if user.is_authenticated %}
           <div id="inputs">
-            <h4>Comment</h4>
+            <h4>You are commenting as <b> {{ uav.user_name }}<b> </h4>
             <!-- <p class="category">fillup</p> -->
-            <div class="row">
-              <div class="col-sm-6 col-lg-3">
-                <div class="form-group">
-                  Email :
-                  <br>
-                  <br>
-                  <input type="text"  placeholder="Email" class="form-control" />
-                </div>
-              </div>
-              <br>
-              <br>
-              <div class="col-sm-1 col-lg-10">
-                <div class="form-group has-success">
-
-                  <input type="text" placeholder="Comment here" class="form-control form-control-success" />
-                </div>
-              </div>
-
-            </div>
+            <form class="from-control" method="POST">
+                {% csrf_token %}
+                  <div class="form-group">
+                      <label for="content">Comment</label>
+                        {{comment_form.as_p}}
+                      </div>
+                      <input type="submit" name="comment" class="btn btn-warning">
+                    </form>
           </div>
 
+          {% else %}
+
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <div class="main">
+
+            <div class="section section-basic" id="basic-elements">
+              <div class="container"  >
+                <h3>login to comment</h3>
+                </div>
+              </div>
+            </div>
 
 
+          {% endif %}
 <!-- Comments here -->
 
 <div class="section section-team text-center">
@@ -121,18 +144,21 @@
         <h2 class="title">Comments section</h2>
         <div class="team">
           <div class="row">
+            {% for comment in comments %}
+            <div class="space-50"></div>
             <div class="col-md-4">
               <div class="team-player">
-                <img src="{% static 'assets/img/avatar.jpg' %}" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                <h4 class="title">Romina Hadid</h4>
-                <p class="category text-primary">Model</p>
-                <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                  <a href="#">links</a> for people to be able to follow them outside the site.</p>
+                <img src="{% static 'assets/img/logo.png' %}" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                <h4 class="title">{{ comment.user }}</h4>
+                <!-- <h1>{{ comment. }}</h1> -->
+                <p class="category text-default">{{ comment.created_at }}</p>
+                <p class="category text-primary">{{ comment.content }}</p>
                 <!-- <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a> -->
                 <!-- <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-instagram"></i></a> -->
                 <!-- <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-facebook-square"></i></a> -->
               </div>
             </div>
+            {% endfor %}
           </div>
         </div>
       </div>
