--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -41,7 +41,7 @@
 <body class="index-page sidebar-collapse">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-orange ">
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="navbar-translate">
         <a class="navbar-brand" href="{% url 'home' %}" rel="tooltip" title="Multirotors, Planes, Models" data-placement="bottom">
         mIcRo-aViAtIoN
@@ -133,7 +133,7 @@
 
         </ul>
       </div>
-    </div>
+    <!-- </div> -->
   </nav>
   <!-- End Navbar -->
   {% block forhome %}
