navbar changed, added contact form and model, working just fine

--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -73,6 +73,16 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">
+              <p>Home</p>
+            </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact' %}">
+                <p>Contact us</p>
+              </a>
+          </li>
+          <li class="nav-item">
               <a class="nav-link" href="{% url 'aboutus' %}">
                 <p>About Us</p>
               </a>
