admin pages made more informative

--- a/micro/templates/micro/loginuser.html
+++ b/micro/templates/micro/loginuser.html
@@ -39,7 +39,7 @@
                       <i class="now-ui-icons users_circle-08"></i>
                     </span>
                   </div>
-                  <input type="text" name="username" class="form-control" placeholder="User Name" id="username">
+                  <input type="text" name="username" class="form-control title" placeholder="User Name" id="username">
                 </div>
                 <div class="input-group no-border input-lg">
                   <div class="input-group-prepend">
@@ -47,7 +47,7 @@
                       <i class="now-ui-icons ui-1_lock-circle-open"></i>
                     </span>
                   </div>
-                  <input type="password" placeholder="Passwords" name="password" class="form-control" id="password" />
+                  <input type="password" placeholder="Passwords" name="password" class="form-control title" id="password" />
                 </div>
               </div>
               <div class="card-footer text-center">
