custom logo added to the site, navbarbrand added as well

--- a/micro/templates/micro/loginuser.html
+++ b/micro/templates/micro/loginuser.html
@@ -19,8 +19,8 @@
 -->
 {% block content %}
   <!-- End Navbar -->
-  <div class="page-header clear-filter" filter-color="orange">
-    <div class="page-header-image" style="background-image:url({% static 'assets/img/login.jpg' %})"></div>
+  <!-- <div class="page-header clear-filter" filter-color="orange"> -->
+    <div class="page-header-image" style="background-image:url()"></div> {# {% static 'assets/img/login.jpg' %} #}
     <div class="content">
       <div class="container">
         <div class="col-md-4 ml-auto mr-auto">
@@ -29,7 +29,7 @@
               {% csrf_token %}
               <div class="card-header text-center">
                 <div class="logo-container">
-                  <img src="{% static 'assets/img/now-logo.png' %}" alt="">
+                  <img src="{% static 'assets/img/logo_m.png' %}" alt="">
                 </div>
               </div>
               <div class="card-body">
@@ -67,6 +67,6 @@
             </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
 {% endblock %}
