--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -43,8 +43,14 @@
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-orange ">
     <!-- <div class="container"> -->
       <div class="navbar-translate">
+        <a class="nav-brand ">
+          <img class="" src="{% static 'assets/img/logo_m_nav.png' %}" alt="">
+        </a>
         <a class="navbar-brand" href="{% url 'home' %}" rel="tooltip" title="Multirotors, Planes, Models" data-placement="bottom">
         mIcRo-aViAtIoN
+        </a>
+
+        <a class="navbar-brand" href="#">
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar top-bar"></span>
