--- a/micro/templates/micro/home.html
+++ b/micro/templates/micro/home.html
@@ -10,7 +10,7 @@
     </div>
     <div class="container">
       <div class="content-center brand">
-        <img class="n-logo" src="{% static 'assets/img/now-logo.png' %}" alt="">
+        <img class="" src="{% static 'assets/img/logo_m_small.png' %}" alt="">
         <h1 class="h1-seo">mIcRo-aViAtIoN</h1>
         <h3>multirotors, planes, models.</h3>
       </div>
