Fixed wing ready

--- a/fixedwing/templates/fixedwing/all_fixedwing.html
+++ b/fixedwing/templates/fixedwing/all_fixedwing.html
@@ -41,14 +41,14 @@
         <a href="#">
           <img src="{{ fix.image.url }}" alt="Image" class="img-raised">
         </a>
-        <a href="{% url 'fix:detail' fix.id %}" class="btn btn-outline-default btn-primary btn-round">Detail Page</a>
+        <a href="{% url 'fixedwing:detail' fix.id %}" class="btn btn-outline-default btn-primary btn-round">Detail Page</a>
       </div>
       <!-- <div class="col"> -->
 
 
 
         <div class="col-md-10 ml-auto col-xl-6 mr-auto ">
-              <!-- <p class="category">{{ uav.title }}</p> -->
+
               <!-- Nav tabs -->
               <div class="card">
                 <div class="card-header">
