--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -102,7 +102,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{% url 'uav:all_uavs' %}">RC aircrafts UAVs</a>
-              <a class="dropdown-item" href="#">Fixed Wings</a>
+              <a class="dropdown-item" href="{% url 'fixedwing:all_fixedwing' %}">Fixed Wings</a>
               <a class="dropdown-item" href="#">Multirotors</a>
             </div>
           </li>
