--- a/uav/templates/uav/detail.html
+++ b/uav/templates/uav/detail.html
@@ -4,8 +4,9 @@
 {% block content %}
 
 <br>
+<div class="section section-signup" style="background-image: url({% static 'assets/img/bg11.jpg' %}); background-size: cover; background-position: top center; min-height: 700px;">
+<div class="container">
 <div class="main">
-<br>
   <div class="section section-basic" id="basic-elements">
     <div class="container">
       <h1>{{ uav.title }}</h1>
@@ -72,6 +73,8 @@
            </div>
          </div>
        </div>
+     </div>
+     </div>
      </div>
 
 <div class="section">
